<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="357dp"
        android:layout_height="502dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="359dp"
            android:layout_height="519dp"
            android:orientation="vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <Switch
                android:id="@+id/enablenotif"
                android:layout_width="76dp"
                android:layout_height="58dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="408dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/notif"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editEmail"
                android:layout_width="196dp"
                android:layout_height="49dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="216dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText">

            </EditText>

            <TextView
                android:id="@+id/geo"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="364dp"
                android:text="GeoLocation:"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/notif"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="416dp"
                android:text="Notifications:"
                android:textSize="18sp"
                android:visibility="gone"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="237dp"
                android:layout_height="43dp"
                android:layout_marginTop="288dp"
                android:text="Preferences"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editName"
                android:layout_width="195dp"
                android:layout_height="46dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="144dp"
                android:hint="Name"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText">

            </EditText>

            <TextView
                android:layout_width="174dp"
                android:layout_height="68dp"
                android:layout_marginTop="44dp"
                android:text="Profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.777"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="122dp"
                android:layout_height="103dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="220dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvStories"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/pfp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/baseline_person_24" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Switch
                android:id="@+id/enablegeo"
                android:layout_width="77dp"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="352dp"
                app:layout_constraintStart_toEndOf="@+id/geo"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        android:backgroundTint="@color/primary_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.202" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/primary_button"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.202" />

</androidx.constraintlayout.widget.ConstraintLayout>