...
        android:id="@+id/scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/scanner"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile"
        tools:ignore="MenuTitle"/>
</menu>
